--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -11,13 +11,13 @@
 </div>
 <% end %>
   <div class="field form-group">
-    <%= form.label :title %>
+    <%= form.label :"タイトル" %>
     <%= form.text_field :title,id: :picture_title,class: "form-control" %>
 
   </div>
 
   <div class="field form-group">
-    <%= form.label :blog_content %><br>
+    <%= form.label :"買った時のエピソード" %><br>
     <%= form.text_area :content, id: :picture_blog_content ,size: "40x4",class: "form-control" %>
   </div>
   <div class="field form-group">
@@ -30,6 +30,7 @@
   <div class="field form-group">
     <%= form.label :image %>
     <%= form.file_field :image,id: :picture_image ,class: "form-control" %>
+    <%= form.hidden_field :image_cache %>
   </div>
   <div class="field form-group">
   <%= form.submit  class: "btn btn-primary" %><%= link_to '戻る', pictures_path,class: "btn btn-primary" %>
