--- a/app/views/pictures/check.html.erb
+++ b/app/views/pictures/check.html.erb
@@ -1,11 +1,70 @@
 <div class="col-xs-12 col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4">
+  <%# binding.pry %>
   <h3>以下を確定したら画像を加工しよう。<br>公にしたくない所を始点と終点を打って黒塗りしよう</h3>
   <div class="canvas_wrapper">
     <canvas id="screen_image" width="300" height="420"></canvas>
   </div>
-  <script type="text/javascript">
-    edit_picture();
-  </script>
+<script>
+var cl = new cloudinary.Cloudinary({cloud_name: "hvnjlebk8", secure: true});
+var img = new Image();
+var flg = true;
+var flg2 = false;
+var first_x = null;
+var first_y = null;
+var last_x = null;
+var last_y = null;
+var base1 = null;
+var data =null;
+
+// img = cl.imageTag(gon.picture + "?" + new Date().getTime()).toHtml();　データ取得用かも
+img.src = `/uploads/tmp/${gon.picture}`
+console.log(img);
+var canvas = document.getElementById('screen_image');
+if (canvas && canvas.getContext) {
+  var ctx = canvas.getContext('2d');
+  img.onload = function() {
+    ctx.drawImage(img,0,0,300,300 * img.height / img.width);
+
+    document.getElementById('custom_image').value = "";
+    canvas.addEventListener("click", first_click, false);
+    canvas.addEventListener("click", fill_rect, false);
+    // $('#custom_image').fileupload({ formData: { file: data }});
+    // $('#custom_image').fileupload('add', { files: [ data ] });
+  };
+  const first_click = function(e) {
+    var rect = e.target.getBoundingClientRect();
+    if (flg) {
+      first_x = e.clientX - rect.left;
+      first_y = e.clientY - rect.top;
+      flg = false;
+    } else {
+      last_x = e.clientX - rect.left;
+      last_y = e.clientY - rect.top;
+      flg = true;
+      flg2 = true;
+    }
+  };
+
+  const fill_rect = function(){
+    let CSRF_TOKEN = $('meta[name = "csrf-token"]').attr('content');
+    if (flg2 === true) {
+      if (first_x > last_x) {
+        [first_x, last_x] = [last_x, first_x]
+      }
+      if (first_y > last_y) {
+        [first_y, last_y] = [last_y, first_y]
+      }
+      ctx.fillStyle = "rgb(0, 0, 0)";
+      ctx.fillRect(first_x, first_y, last_x - first_x, last_y - first_y);
+      flg2 = false;
+      data = canvas.toDataURL('image/png');
+      document.getElementById('custom_image').value = data;
+      // $('#custom_image').fileupload({ formData: { file: data }});
+      // $('#custom_image').fileupload('add', { files: [ data ] });
+    }
+  };
+}
+</script>
   <%= form_with(model: @picture, url: pictures_path, local: true) do |form| %>
   <div class="field form-group">
     <%= form.hidden_field :title %>
@@ -15,6 +74,7 @@
   </div>
   <div class="field form-group">
     <%= form.hidden_field :image ,id: :picture_image %>
+    <%= hidden_field_tag :"cache[image]", @picture.image.cache_name %>
   </div>
   <div class="field form-group">
     <%= form.hidden_field :search_word ,id: :search_word %>
@@ -22,6 +82,7 @@
   <div class="field form-group">
     <%= form.hidden_field :custom_image ,id: :custom_image %>
   </div>
+  <p><%#= image_tag @picture.image %></p>
   <p>タイトル:<%= @picture.title %></p>
   <p>コンテンツ:<%= @picture.content %></p>
   <div class="field form-group">
