--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -6,7 +6,7 @@
   <% @pictures.each do |picture| %>
     <div class="box">
       <div class="content_show">
-        <p><%= image_tag picture.image_url ,class:'img center-block' %></p>
+        <p><%= image_tag picture.image_url ,:size => "300x420",class:'img center-block' %></p>
         <span>タイトル</span>
         <p><%= picture.title %></p>
         <span>メッセージ</span>
