画像が保存されない症状とedit画面に画像が映らない障害の対応

--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -3,7 +3,7 @@
   <div class="canvas_wrapper">
     <canvas id="screen_image" width="300" height="420"></canvas>
   </div>
-  <%= javascript_include_tag 'check_gn_picture.js', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'edit_gn_picture.js', 'data-turbolinks-track' => true %>
   <%= render 'form', picture: @picture %>
   <% if @picture.user == current_user %>
     <%= link_to '確認', picture_path(@picture) , class: "btn btn-xs btn-primary" %>|
