--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
     <%if @user.id == session[:user_id] then %>
       <h1><%= @user.name %>のページ</h1>
       <p>メールアドレス: <%= @user.email %></p>
-      <p><%= cl_image_tag @user.file.filename,width:300 %></p>
+      <p><%= image_tag @user.image_url ,width:300 %></p>
       <p><%= link_to "コンテンツへ移動",pictures_url, class:'btn btn-default'%></p>
     <%else%>
       <p><%= link_to "コンテンツへ移動",pictures_url, class:'btn btn-default'%></p>
