--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,7 +15,7 @@
  *= require_tree .
  *= require_self
  */
-.container1{
+.container{
   width:100%;
   height:100%;
 }
@@ -54,8 +54,8 @@ flex-wrap: wrap;
   padding: 0.5rem 0.5rem 0.5rem 2rem;
   background-color: #fff;
 }
-.picture_search{
-  margin: 15px auto;
+#picture_search{
+  margin: 0 auto;
 }
 
 
