--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,3 +1,4 @@
+<div class="col-xs-12 col-md-4 col-md-offset-4 col-lg-4 col-lg-offset-4">
 <h1 class="text-center">家電を買い叩け</h1>
 <div id="new-picture-link">
   <%= link_to '新規ブログを作成する', new_picture_path %>
@@ -31,10 +32,12 @@
     </div>
   <% end %>
 </div>
-<div class="picture_search">
-  <%= search_form_for(@keyword, :url => search_pictures_path, html: { method: :post }) do |f| %>
-  <%= f.label :search_word_cont_any %><br>
-  <%= f.search_field :search_word_cont_any %><br>
-  <%= f.submit 'キーワード検索する' %>
-<% end %>
+
+  <div>
+    <%= search_form_for(@keyword, :url => search_pictures_path, html: { method: :post }) do |f| %>
+    <%= f.label :search_word_cont_any %><br>
+    <%= f.search_field :search_word_cont_any %><br>
+    <%= f.submit 'キーワード検索する' %>
+  <% end %>
+  </div>
 </div>
