--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -15,7 +15,7 @@
       <% if @favorite.present? %>
         <%= link_to 'お気に入り解除する', favorite_path(picture_id: @picture.id), method: :delete, class: 'btn btn-xs btn-danger' %>
       <% else %>
-        <%= link_to 'お気に入りする', favorites_path(picture_id: @picture.id), method: :post, class: 'btn btn-xs,btn-primary' %>
+        <%= link_to 'お気に入りする', favorites_path(picture_id: @picture.id), method: :post, class: 'btn btn-xs btn-primary' %>
       <% end %>
     <% end %>
   </div>
