--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -32,7 +32,12 @@
   width: 100%;
   height: 100%;
 }
-
+.new_contents{
+  font-size: 25px;
+  font-weight: bold;
+  text-align: center;
+  margin: 0 20px;
+}
 
 div.container_box{
 display: flex;
