--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -46,9 +46,10 @@ flex-wrap: wrap;
 
 .box{
   margin: 0px 8px;
-  width:23%;
-  height:auto;
+  // width:23%;
+  // height:auto;
 }
+
 
 .keyword_box{
   font-size: 2rem;
