--- a/app/views/pictures/check.html.erb
+++ b/app/views/pictures/check.html.erb
@@ -1,3 +1,4 @@
+<div class="row">
 <div class="col-xs-12 col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4">
   <%# binding.pry %>
     <h3>以下を確定したら画像を加工しよう。<br>公にしたくない所を始点と終点を打って黒塗りしよう</h3>
@@ -40,4 +41,5 @@
     <%= form.hidden_field :content %>
     <%= form.submit "戻る", name: 'back', class: 'btn btn-xs btn-danger' %>
   <% end %>
+</div>
 </div>
