--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="row">
 <div class="col-xs-12 col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4">
   <h1>画像を編集する</h1>
   <div class="canvas_wrapper">
@@ -9,4 +10,5 @@
     <%= link_to '確認', picture_path(@picture) , class: "btn btn-xs btn-primary" %>|
   <% end %>
   <%= link_to '一覧へ', pictures_path , class: "btn btn-xs btn-primary"%>
+</div>
 </div>
