--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<div class="row">
 <div class="col-xs-12 col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4">
   <h1>サインアップ</h1>
   <% if @user.errors.any? %>
@@ -34,5 +35,6 @@
     </div>
     <%= f.submit "Create my account" %>
   <% end %>
+</div>
 </div>
 </div>
