--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,3 +1,4 @@
+<div class="row">
 <div class="col-xs-12 col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4">
   <p>
     <strong>レシート内容</strong>
@@ -20,3 +21,4 @@
       <% end %>
     <% end %>
   </div>
+</div>
