--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,11 +10,17 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require bootstrap/dist/css/bootstrap
  *= require toastr
  *= require_tree .
  *= require_self
  */
+ @import "toastr";
+ @import "bootstrap-sprockets";
+ @import "bootstrap";
+
+#nav{
+    background-color: #f5f5f5;
+}
 .container{
   width:100%;
   height:100%;
@@ -67,4 +73,11 @@ flex-wrap: wrap;
 
 .picture-links{
   margin-bottom: 2rem;
+}
+
+
+.navbar-default {
+  background: transparent;
+  border-color: transparent;
+  z-index: 10;
 }
