fixed　タイトルを品物名に変更

--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -11,7 +11,7 @@
   </div>
 <% end %>
 <div class="field form-group">
-  <p><%= form.label :"タイトル" %></p>
+  <p><%= form.label :"買った品物名" %></p>
   <p><%= form.text_field :title,id: :picture_title,class: "form-control" %></p>
 </div>
 <div class="field form-group">
