--- a/app/views/pictures/check.html.erb
+++ b/app/views/pictures/check.html.erb
@@ -29,8 +29,8 @@
     <p>
       <%#= cl_image_tag @picture.image.file.filename %>
       </p>
-      <p>タイトル:<%= @picture.title %></p>
-      <p>コンテンツ:<%= @picture.content %></p>
+      <p>買った品物名:<%= @picture.title %></p>
+      <p>買った時のノウハウ:<%= @picture.content %></p>
       <p>買った時の金額:<%= @picture.price %>円</p>
       <div class="field form-group">
         <%= form.submit "登録する" , class: 'btn btn-xs btn-primary' %>
