--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -11,7 +11,7 @@
           <div class="col-xs-12 col-md-3 col-lg-3">
           <%#= binding.pry %>
           <p><%= cl_image_tag picture.image.file.filename ,:size => "300x420",class:'img center-block' %></p>
-          <span>タイトル</span>
+          <span>買った品物名</span>
           <p><%= picture.title %></p>
           <span>買った時のノウハウ</span>
           <p><%= picture.content %></p><br>
