--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,7 +1,7 @@
 
   <h1 class="text-center">家電を買い叩け</h1>
   <div id="new-picture-link">
-    <%= link_to '新規ブログを作成する', new_picture_path %>
+    <%= link_to '新規レシート情報を登録', new_picture_path ,class:'title_word'%>
   </div>
   <div class="container_box">
 
