--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -82,3 +82,24 @@ flex-wrap: wrap;
   border-color: transparent;
   z-index: 10;
 }
+
+.title_word{
+  display: block;
+  margin: 30px;
+  font-size: 20px;
+  font-style: italic;
+  font-weight: bold;
+}
+
+
+.box22{
+    padding: 0.5em 1em;
+    margin: 1em 0;
+    background: #99cc;
+    border-left: solid 6px #5bb7ae;
+    box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.33);
+}
+.box22 p {
+    margin: 0;
+    padding: 0;
+}
