写真一式のボックスにボーダー線を入れた

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -56,6 +56,13 @@ flex-wrap: wrap;
   // height:auto;
 }
 
+.cover_box{
+  display: block;
+  margin-top: 15px;
+  margin-bottom: 30px;
+  border-bottom-style: dashed;
+}
+
 
 .keyword_box{
   font-size: 2rem;
