--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,46 +1,47 @@
+<h1 class="text-center">家電を買い叩け</h1>
+<div id="new-picture-link">
+  <%= link_to '新規レシート情報を登録', new_picture_path ,class:'title_word'%>
+</div>
+<div class="container_box">
 
-  <h1 class="text-center">家電を買い叩け</h1>
-  <div id="new-picture-link">
-    <%= link_to '新規レシート情報を登録', new_picture_path ,class:'title_word'%>
-  </div>
-  <div class="container_box">
-
-      <div class="box">
-        <div class="row">
-          <% @pictures.each do |picture| %>
-          <div class="col-xs-12 col-md-3 col-lg-3">
-          <%#= binding.pry %>
-          <p><%= cl_image_tag picture.image.file.filename ,:size => "300x420",class:'img center-block' %></p>
-          <span>買った品物名</span>
-          <p><%= picture.title %></p>
-          <span>買った時のノウハウ</span>
-          <p><%= picture.content %></p><br>
-          <% if picture.price.present? %>
-            <span>買った時の金額</span>
-            <p><%= picture.price %>円</p><br>
-          <% end %>
-          <% unless picture.search_word.blank? %>
-            <span class="keyword_box">これは検索用のキーワード</span>
-            <p class="btn btn-info"><%= picture.search_word %></p>
-          <% end %><br><br>
-          <p><%= image_tag picture.user.image_url,width:30,height:30,class:'img-circle' %></p>
-          <p><%= picture.created_at %></p>
-          <div class="picture-links">
-            <%= link_to '確認', picture_path(picture), class: 'btn btn-xs btn-primary' %>
-            <% if picture.user == current_user %>
-              <%= link_to '編集', edit_picture_path(picture), class: 'btn btn-xs btn-info' %>
-              |
-              <%= link_to '削除', picture_path(picture), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-xs btn-danger' %>
+  <div class="box">
+    <div class="row">
+      <% @pictures.each do |picture| %>
+        <div class="col-xs-12 col-md-3 col-lg-3">
+          <div class="cover_box">
+            <p><%= cl_image_tag picture.image.file.filename ,:size => "300x420",class:'img center-block' %></p>
+            <span>買った品物名</span>
+            <p><%= picture.title %></p>
+            <span>買った時のノウハウ</span>
+            <p><%= picture.content %></p><br>
+            <% if picture.price.present? %>
+              <span>買った時の金額</span>
+              <p><%= picture.price %>円</p><br>
             <% end %>
+            <% unless picture.search_word.blank? %>
+              <span class="keyword_box">これは検索用のキーワード</span>
+              <p class="btn btn-info"><%= picture.search_word %></p>
+            <% end %><br><br>
+            <p><%= image_tag picture.user.image_url,width:30,height:30,class:'img-circle' %></p>
+            <p><%= picture.created_at %></p>
+            <div class="picture-links">
+              <%= link_to '確認', picture_path(picture), class: 'btn btn-xs btn-primary' %>
+              <% if picture.user == current_user %>
+                <%= link_to '編集', edit_picture_path(picture), class: 'btn btn-xs btn-info' %>
+                |
+                <%= link_to '削除', picture_path(picture), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-xs btn-danger' %>
+              <% end %>
+            </div>
           </div>
         </div>
-          <% end %>
-      </div>
-    </div>
 
+      <% end %>
+    </div>
   </div>
 
-  <div class="row">
+</div>
+
+<div class="row">
   <div class="col-xs-12 col-md-4 col-md-offset-4 col-lg-4 col-lg-offset-4">
     <div>
       <%= search_form_for(@keyword, :url => search_pictures_path, html: { method: :post }) do |f| %>
@@ -48,6 +49,6 @@
       <%= f.search_field :search_word_cont_any %><br>
       <%= f.submit 'キーワード検索する' %>
     <% end %>
-    </div>
   </div>
-  </div>
+</div>
+</div>
