日本時間に対応

--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -32,7 +32,7 @@
   <%= form.hidden_field :custom_image, id: :custom_image %>
 </div>
 <div class="field form-group">
-  <p><%= form.label :image %></p>
+  <p><%= form.label :"画像" %></p>
   <p><%= form.file_field :image,id: :picture_image ,class: "form-control" %></p>
   <%= form.hidden_field :image_cache %>
 </div>
