--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,6 +21,11 @@
 #nav{
     background-color: #f5f5f5;
 }
+
+.row{
+  width: 100%;
+}
+
 .container{
   width:100%;
   height:100%;
@@ -50,11 +55,13 @@ display: flex;
 flex-wrap: wrap;
 }
 
-.box{
-  margin: 0px 8px;
-  width: 100%;
-  height: auto;
-}
+// .box{
+//   margin: 0px 8px;
+//   width: 100%;
+//   height: auto;
+// }
+
+
 
 .cover_box{
   display: block;
